--- a/src/components/ui/Login.css
+++ b/src/components/ui/Login.css
@@ -3,5 +3,14 @@
 }
 
 .form-container {
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    margin: auto;
+    background-color: #FFF;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 10px 5px 5px #443f3f;
+    margin-top: 70px;
 }
