--- a/src/components/ui/Login/Login.css
+++ b/src/components/ui/Login/Login.css
@@ -47,15 +47,24 @@
     box-sizing: border-box;
 }
 
-.form-actions button {
+.form-actions button:first-child {
+    float: left;
+    margin-left: 10px;
+    box-sizing: border-box;
+}
+
+.form-actions button:last-child {
     float: right;
     margin-right: 10px;
     box-sizing: border-box;
 }
 
 .form-error {
-    color: red;
-    width: 100%;
+    color: white;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 20px 30px;
+    background-color: red;
+    margin: 10px;
+    border-radius: 3px;
 }
